--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
 		"source": "https://github.com/bcit-ci/CodeIgniter"
 	},
 	"require": {
-		"php": ">=5.3.7",
-		"dompdf/dompdf": "*"
+		"php": ">=7.4",
+		"dompdf/dompdf": "^3.0"
 	},
 	"suggest": {
 		"paragonie/random_compat": "Provides better randomness in PHP 5.x"
@@ -23,14 +23,14 @@
 			"phpunit --color=always --coverage-text --configuration tests/travis/sqlite.phpunit.xml"
 		],
 		"post-install-cmd": [
-			"sed -i s/name{0}/name[0]/ vendor/mikey179/vfsstream/src/main/php/org/bovigo/vfs/vfsStream.php"
+			"php -r \"file_put_contents('vendor/mikey179/vfsstream/src/main/php/org/bovigo/vfs/vfsStream.php', str_replace('name{0}', 'name[0]', file_get_contents('vendor/mikey179/vfsstream/src/main/php/org/bovigo/vfs/vfsStream.php')));\""
 		],
 		"post-update-cmd": [
-			"sed -i s/name{0}/name[0]/ vendor/mikey179/vfsstream/src/main/php/org/bovigo/vfs/vfsStream.php"
+			"php -r \"file_put_contents('vendor/mikey179/vfsstream/src/main/php/org/bovigo/vfs/vfsStream.php', str_replace('name{0}', 'name[0]', file_get_contents('vendor/mikey179/vfsstream/src/main/php/org/bovigo/vfs/vfsStream.php')));\""
 		]
 	},
 	"require-dev": {
-		"mikey179/vfsstream": "1.6.*",
-		"phpunit/phpunit": "4.* || 5.* || 9.*"
+		"mikey179/vfsstream": "^1.6",
+		"phpunit/phpunit": "^9.0"
 	}
 }
